day-4Ingress/ingress_with_dns.yml
#kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.2.1/deploy/static/provider/cloud/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    external-dns.alpha.kubernetes.io/hostname: thekundan.com
spec:
  ingressClassName: nginx
  rules:
  #- host: thekundan.com
  - host: thekundan.com
    http:
      paths:
      - path: /nginx
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx
            port:
              number: 80
      - path: /httpd
        pathType: ImplementationSpecific
        backend:
          service:
            name: httpd
            port:
              number: 80
      - path: /abhishek
        pathType: ImplementationSpecific
        backend:
          service:
            name: httpd
            port:
              number: 80
